2004-02-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (XDisplayImage): Display was leaking memory
	like a sieve.  Now it doesn't.
	* magick/memory.c (CloneMemory): Computation for when it is safe
	to use memcpy() was incorrect.  Use memmove() rather than
	backwards-copy loop.
	* Makefile.am ($(DIST_ARCHIVE_SRPM)): Added rules to build a
	source RPM.
	* configure.ac: Search for 'buildrpm' or 'rpm' programs in order to
	support creating RPM packages on a system which has RPM installed.
	* version.sh (PACKAGE_VERSION): Changed snapshot release naming so
	that there is only one dash in the name and the snapshot date is
	prefixed with '0' to assure proper directory sorting.  This allows
	snapshot naming to be acceptable to RPM.  The snapshot package
	name is now similar to GraphicsMagick-1.1.020040218.tar.bz2

2004-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (RegisterXWDImage): Always register XWD, but only
	register read/write methods if it is supported.
	* wand/magick_wand.c: Synchronized with latest ImageMagick API
	changes.

2004-02-16  Lars Ruben Skyum  <lars.skyum@stibo.com>

	* magick/resize.c (HorizontalFilter): Fixed: do process K channel
	for CMYK images.
	(VerticalFilter): do process K channel for CMYK images.
	
2004-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (ReadTGAImage): Fix matte channel handling. For
	16-bit packets, use integer rather than floating point. Return
	gray images as PseudoClass and set is_grayscale flag.  Add
	logging.
	* magick/fx.c (WaveImage): Ensure that image is
	DirectClass. Ensure that matte channel is initialized if
	necessary. Include background color in is_grayscale evaluation.
	* magick/gem.c (GenerateNoise): Scale noise to range of quantum.

2004-02-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jp2.c (WriteJP2Image): Support passing all documented
	Jasper options using -define.

2004-02-13  Peter Boos  <pedib@colorfullife.com>
